# HelloX_OS

./: .autotools  .cproject  .gitignore  .project  .project1  Authors.txt  Hello_OS.zip.REMOVED.git-id  README.md  aclocal.m4  amake.sh  autogen.sh  automake.md  chcase.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac.1  configure.scan  libtool  readme.md
kernel/: Authors.txt  CL.read.1.tlog  CodingStyle.md  Hello China操作系统编程指南.doc  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  UpgradeLog.XML  config.h  config.h.in  debug.txt  fdos11.tar.bz2.REMOVED.git-id  floppy.img  hellox.img  hellox_kerel.S  hellox_kernel  kernel.mk  make_error.txt  master.dep  master.mak  master.opt  master.plg  master.sln  master.vcxproj  master.vcxproj.filters  odin0160.img  odin1440.img  revise.txt  stamp-h1
kernel/Release/master.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  master.lastbuildstate
kernel/appldr/: AppLoader.C  AppLoader.h  AppLoaderDef.h  AppLoader_ELF.C  AppLoader_PE.C  AppLoader_STM32.C
kernel/arch/stm32/: HELLOCN.C  arch.h  arch_stm.c  osadapt.s  syn_mech.h
kernel/arch/x86/: .Tpo  ARCH.H  ARCH_X86.C  BIOS.C  BIOS.H  (+42 more)
kernel/bluetooth/: .gitignore
kernel/bsdstack/: readme.txt
kernel/config/: config.h
kernel/doc/: condition.doc  install.txt  ip_hang.txt  kt_suspend.doc  lock_ord.txt  lwip_mt.txt  pendissu.txt  proc_del.txt  rev_recd.txt  rr_ptmalloc.txt  syscfg.txt  timeout_wait.doc  todo.txt  upgrade.txt  操作系统哲学思考.txt  网络功能挂起问题定位记录（20210225）.docx
kernel/enhance/: readme.txt
kernel/examapp/: __hxcomm.h  atan.c  ctype.c  ctype.h  errno.c  errno.h  examapp.c  examapp.vcxproj  examapp.vcxproj.filters  fabs.c  hellox.c  hellox.h  io.c  io.h  ip_addr.c  malloc.c  malloc.h  sched.c  sockets.c  sqrt.c  stdint.h  stdio.h  stdlib.h  string.c  string.h  tftpsrv.c  time.h  types.h
kernel/fs/: FAT32.C  FAT32.H  FAT322.C  FATMGR.C  FATMGR2.C  FATSTR.C  Makefile  Makefile.am  Makefile.in  NTFS.C  NTFS.H  NTFS2.C  NTFSDRV.C  chcase.sh  fat32.c  fat32.h  fat322.c  fatmgr.c  fatstr.c  fsstr.c  fsstr.h  ntfsdrv.c
kernel/include/: BUFFMGR.H  COMMOBJ.H  CharDisplay.H  DEVMGR.H  DIM.H  HEAP.H  HELLOCN.H  IOMGR.H  KAPI.H  KMEMMGR.H  KTMGR.H  KTMSG.H  MEMMGR.H  MODMGR.H  OBJQUEUE.H  PAGEIDX.H  PCI_DRV.H  RINGBUFF.H  STATCPU.H  SYSCALL.H  SYSTEM.H  StdAfx.h  TYPES.H  VMM.H  align.h  ata.h  buffmgr.h  byteord.h  cfgmgr.h  chcase.sh  comqueue.h  console.h  dbm.h  debug.h  devmgr.h  globvar.h  heap.h  hellocn.h  iomgr.h  kapi.h  (+21 more)
kernel/jvm/: Makefile  Makefile.in  access.c  alloc.c  cast.c  class.c  class.h  config.h.in  dll.c  dll_ffi.c  excep.c  execute.c  frame.c  hash.c  hooks.c  jam.c  jam.h  jni-internal.h  jni.c  jni.h  jvm_arch.h  jvm_conf.h  jvm_init.c  jvm_str.c  jvm_time.c  lock.c  lock.h  natives.c  properties.c  reflect.c  resolve.c  shutdown.c  sig.c  symbol.c  thread.c  utf8.c  zip.c
kernel/kapi/: .Tpo  KAPI.C  KAPI.H  Makefile  Makefile.am  Makefile.in  kapi.S  kapi.c  kapi.h
kernel/kernel/: .Tpo  COMQUEUE.C  CharDisplay.C  DEVMGR.C  DIM.C  HEAP.C  IOMGR.C  IOMGR2.C  KAPI.C  KERMOD.C  KMEMMGR.C  KTMGR.C  KTMGR2.C  MEMMGR.C  MEM_FBL.C  MODMGR.C  Makefile  Makefile.am  Makefile.in  OBJMGR.C  OBJQUEUE.C  PAGEIDX.C  PCI_DRV.C  PERF.C  STATCPU.C  SYNOBJ.C  SYSCALL.C  SYSTEM.C  TYPES.C  VMM.C  cfgmgr.c  chardisp.c  chardisplay.c  console.c  dbm.c  debug.c  devmgr.c  dim.c  heap.c  iomgr.c  (+24 more)
kernel/kthread/: Makefile  Makefile.am  Makefile.in  idle.c  idle.h  logcat.c  logcat.h  syslog.c  syslog.h
kernel/lib/: .Tpo  Makefile  Makefile.am  Makefile.in  atox.c  ctype.c  ctype.h  errno.c  errno.h  float.h  getenv.c  inttypes.h  io.c  io.h  liblog.c  limits.h  math.c  math.h  memory.c  pthread.c  pthread.h  pthread_mutex .c  pthread_mutex.c  pthread_other.c  rand.c  rdxtree.c  rdxtree.h  scanf.c  sched.c  sched.h  setjmp.c  setjmp.h  signal.c  signal.h  stat.c  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  (+8 more)
kernel/make/: hellox.img  hellox.img.hex  hellox_kernel  master.bin.REMOVED.git-id  master.bin.s  mkhellox.sh  v2.hex
kernel/netcore/: bug_oe.txt  ethentry.c  ethio.c  ethmgr.c  ethmgr.h  genif.h  hx_eth.c  hx_eth.h  hx_inet.c  hx_inet.h  mii.h  netcfg.h  netentry.c  netglob.c  netglob.h  netmgr.c  netmgr.h  precfg.h  proto.h  protos.c  tmo.c  tmo.h
kernel/network/: Makefile  Makefile.am  Makefile.in  libnetwork.la  readme.txt  rev_recd.txt
kernel/osentry/: .Tpo  DRVENTRY.C  Makefile  Makefile.am  Makefile.in  OS_ENTRY.C  drventry.c  libosentry.la  mem_scat.c  mem_scat.e  os_entry.c
kernel/scripts/: kernel.ld
kernel/shell/: EXTCMD.C  FDISK.C  FDISK.H  FDISK2.C  FIBONACCI.C  FS.C  FS.H  HEDIT.C  HEDIT.H  HISCMD .C  HYPERTRM.C  HYPERTRM.H  IOCTRL_S.C  IOCTRL_S.H  Makefile  Makefile.am  Makefile.in  SHELL.C  SHELL.H  SHELL1.C  SHELL_HELP.C  SHELL_HELP_.C  SHELL_HELP_SMT32.C  STAT_S.C  STAT_S.H  SYSD_S.C  Telnet.C  extcmd.c  extcmd.h  fdisk.c  fdisk2.c  fibonacci.h  fs.c  hiscmd.c  hypertrm.c  ioctrl_s.c  ioctrl_s.h  network.c  network.h  network2.c  (+17 more)
kernel/ssh/: ssh.c  ssh_def.h  ssh_msg.c  ssh_pkt.c  ssh_pkt.h  ssh_text.c  sshbn.c  sshbn.h  sshdes.c  sshdh.c  sshdss.c  sshmd5.c  sshrsa.c  sshsh256.c  sshsh512.c  sshsha.c  sss_terminal.c
kernel/syscall/: K_API_DEF.H  SYSCALL.C  SYSCALL.H  SYSCALL_IO.C  SYSCALL_KERNEL.C  SYSCALL_KERNEL.H  SYSCALL_SOCKET.C  memxfer.c  memxfer.h
kernel/usb/: ch9.h  ehci.h  ehci_pci.c  ehciint.c  ehciiso.c  ent_ary.c  errno.h  fmt_ucmp.c  hxadapt.h  ohci.h  r8152_e.c  rtl8152.c  usb.c  usb.h  usb.txt  usb_de.c  usb_diag.c  usb_ehci.c  usb_ether.h  usb_hd.c  usb_hub.c  usb_ohci.c  usb_storage.c  usbasync.c  usbasync.h  usbdescriptors.h  usbdev_storage.h  usbhd.c  usbkbd.c  usbkbd.h  usbmgr.c  usbmouse.c  usbmouse.h  usbroothubdes.h  uvc.c  uvc.h  uvc_drv.c  xhci.c  xhci.h  xhci_pci.c  (+1 more)
kernel/user/: Makefile  Makefile.am  Makefile.in  dpi.c  usermain.c  ylight.c
kernel/usragent/: fmt_pe.c  fmt_pe.h  hellox.c  hellox.h  memory.c  stdio.c  string.c  string.h  usragent.c  usragent.vcxproj  usragent.vcxproj.filters
(+1213 files in other folders)
