noinst_LIBRARIES = libkernel.a
libkernel_a_SOURCES = chardisplay.c  debug.c   heap.c    kapi.c     ktmgr2.c   memmgr.c  objqueue.c  perf.c     synobj2.c  system.c comqueue.c     devmgr.c  iomgr2.c  kermod.c   ktmgr.c    modmgr.c  pageidx.c   process.c  synobj.c   types.c console.c      dim.c     iomgr.c   kmemmgr.c  mem_fbl.c  objmgr.c  pci_drv.c   statcpu.c  syscall.c  vmm.c

AM_CPPFLAGS =-nostdlib -m32 -D_POSIX_ -I$(top_srcdir)/kernel/include -I$(top_srcdir)/kernel/lib -I$(top_srcdir)/kernel/config -D__STDAFX_H__ -D__CFG_SYS_CONSOLE


