noinst_LIBRARIES=libshell.a

libshell_a_SOURCES=extcmd.c fdisk.c fs.c hiscmd.c ioctrl_s.c network.c shell.c shell_help.c stat_s.c fdisk2.c fibonacci.c hedit.c hypertrm.c  network2.c shell1.c   shell_help_.c  shell_help_smt32.c  sysd_s.c


AM_CPPFLAGS =-nostdlib -nostdinc -m32 -D_POSIX_ -D__CFG_SYS_MMFBL -I$(top_srcdir)/kernel/include -I$(top_srcdir)/kernel/config -I$(top_srcdir)/kernel/lib -I$(top_srcdir)/kernel/lib/sys -D_TIME_T_DEFINED -D_M_IX86
